// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`11639.ts format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const foo = forwardRef<any>(({
      // foo
      size,
      // onClose,
      // onOpen,
    }: PopoverProps,
) => {})

export function Component({
  prop,
  // comment
}: Type) {
  return div;
}

=====================================output=====================================
const foo = forwardRef<any>(
  ({
    // foo
    size,
    // onClose,
    // onOpen,
  }: PopoverProps) => {},
);

export function Component({
  prop,
  // comment
}: Type) {
  return div;
}

================================================================================
`;

exports[`15707.ts format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const {
  foo11,
  // bar
  // baz
}: Foo = expr;

const {
  foo21,
  // bar
  foo22,
  // baz
}: Foo = expr;

const [
  foo31,
  // bar
  // baz
]: Foo = expr;

const [
  foo41,
  // bar
  foo42,
  // baz
]: Foo = expr;

function method({
  foo,
  // bar = "bar",
  // bazz = "bazz",
}: Foo) {}

function method({
  foo1,
  // bar = "bar",
  foo2
  // bazz = "bazz",
}: Foo) {}

function method([
  foo,
  // bar = "bar",
  foo2
  // bazz = "bazz",
]: Foo) {}

const {
  // bar
  // baz
}: Foo = expr;

const [
  // bar
  // baz
]: Foo = expr;

=====================================output=====================================
const {
  foo11,
  // bar
  // baz
}: Foo = expr;

const {
  foo21,
  // bar
  foo22,
  // baz
}: Foo = expr;

const [
  foo31,
  // bar
  // baz
]: Foo = expr;

const [
  foo41,
  // bar
  foo42,
  // baz
]: Foo = expr;

function method({
  foo,
  // bar = "bar",
  // bazz = "bazz",
}: Foo) {}

function method({
  foo1,
  // bar = "bar",
  foo2,
  // bazz = "bazz",
}: Foo) {}

function method([
  foo,
  // bar = "bar",
  foo2,
  // bazz = "bazz",
]: Foo) {}

const {
  // bar
  // baz
}: Foo = expr;

const [
  // bar
  // baz
]: Foo = expr;

================================================================================
`;

exports[`after-jsx-generic.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let comp = (
  <>
    <Component<number> /* comment1 */></Component>
    <Component<number> foo /* comment2 */></Component>
    <Component<number> /* comment3 */ bar></Component>
    <Component<number> foo /* comment4 */ bar></Component>

    <Component<number>
      // comment5
    ></Component>
    <Component<number>
      foo
      // comment6
    ></Component>
    <Component<number>
      // comment7
      foo
    ></Component>
    <Component<number>
      foo
      // comment8
      bar
    ></Component>
  </>
);

=====================================output=====================================
let comp = (
  <>
    <Component<number> /* comment1 */></Component>
    <Component<number> foo /* comment2 */></Component>
    <Component<number> /* comment3 */ bar></Component>
    <Component<number> foo /* comment4 */ bar></Component>

    <Component<number>
    // comment5
    ></Component>
    <Component<number>
      foo
      // comment6
    ></Component>
    <Component<number>
      // comment7
      foo
    ></Component>
    <Component<number>
      foo
      // comment8
      bar
    ></Component>
  </>
);

================================================================================
`;

exports[`jsx.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
var example1 = <div>
	https://test
</div>;

var example2 = <div>
	/*test*/
</div>;

=====================================output=====================================
var example1 = <div>https://test</div>;

var example2 = <div>/*test*/</div>;

================================================================================
`;

exports[`types.ts format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(() => {
  // swallow error and fallback to using directory as path
}) as string[];

=====================================output=====================================
(() => {
  // swallow error and fallback to using directory as path
}) as string[];

================================================================================
`;
